# ChangeLog for net-misc/yajhfc
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/yajhfc/ChangeLog,v 1.3 2015/03/21 19:44:52 jlec Exp $

  21 Mar 2015; Justin Lecher <jlec@gentoo.org> metadata.xml,
  yajhfc-0.5.2.ebuild:
  Bump to EAPI=5

  02 Jul 2012; Matthew Marlowe <mattm@gentoo.org> yajhfc-0.5.2.ebuild:
  Gpg sign failed on prior commit - recommiting.

*yajhfc-0.5.2 (02 Jul 2012)

  02 Jul 2012; Matthew Marlowe <mattm@gentoo.org> +yajhfc-0.5.2.ebuild,
  +metadata.xml:
  First commit of user submitted ebuild to fix Bug 353041 - new package:
  net-misc/yajhfc. Another client for hylafax plus server. Java based. Ebuild
  meets initial tests and package solves a problem that other gentoo packages
  do not. Still, further work will probably be needed to get this ebuild
  optimal.. Initial release is package masked.