@@ -1,0 +1,18 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
+DIST Everything-2009-08-26.zip 178919 SHA256 9f576c6f5d3c647bffceb20f4b7d02faa696b680551dc9a8123abe218bc9a7d3 SHA512 53a2cfdc185796c924a351f4cabffa4563803714698e141a2782bab5544b81b680c7bc578abd5ac6aa6ddf7891d38d28199ebee672a688d54ea1cd591af760fd WHIRLPOOL 5b7ae5ecb1d284e97330676a4aa951c5eb9de1b8ba968ca54f7e2cc3b662889662b9d3c9e828abed49851611f915c29063977b40a2c3a61affdc30233e6cf932
+EBUILD tablelayout-20090826.ebuild 733 SHA256 619e3a3bdf82e42e7a61f8d85df817d241311e5f51582674bc39693aacb1e7b2 SHA512 df2ab4af0e3bf4d9a4495d8982e16845408e9099dd96dcd48cb27a406268d9de17e409154e61884f4a7d8d55e16530fd6fa7e3603c95616e14c364fcb408a801 WHIRLPOOL 03b71e109fce597eea6a11416758e74a44027382b509d72bf5c779620aa74413314638465ed47a99b3af3f0877a9698f5fdafca091d85578f32c59bdb0274fd6
+MISC ChangeLog 374 SHA256 78ab191a1aabac5edeceace95be6b8f6801b8d2751afb6ea606eb03a1b8466d9 SHA512 3303e989bf8ca61e2200afb9f90d28fa4849112dc9b7013d287099836462a1c648e210420be499468237674c769d9b46f09183bfbdedb3ccb204b37fa0d48102 WHIRLPOOL 25c0186d4cbead304a9e4eca735787acef7648fcf436d27ec26591e32eba13182a93ab4d32bcfa3c6eb1725e0524c0265849fbe51c362638d1ab811e6a1714ac
+MISC metadata.xml 159 SHA256 da2aaa3223c5418688dfbba6f899648c5bcb2e4610126519a1a862913c4f8fa6 SHA512 f5bc77a4e168cdb5a9f9c347f6f437b16bd28978351ec692d4f7e406ba93479424e2272de70fe85d2e0668172de8ccd3aa096f49d5912ed91d17bea11756865b WHIRLPOOL b0cba2d5917cc20d7409ccfedc345ab38c71df76c5c030df578d6db718f8a60dcfc1927c20e7062fafc62e955a90ec9f21cdcef6d7a566fddf374ce766ca64cc
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iQEcBAEBCAAGBQJVDoZ4AAoJEKCEBkJ3xQHtAHUH/1aIJrXw8Xr1L3RySQs+BpDJ
+phmbpGb1z0W3d9vRZw8KKzo9bGCLeqqSCY/rs5scBOXMG0BIhwzU0SmzGSEwzR5O
+DRFGki9qmicTZCdx1O/LZTijfhjwFW84frmd6a/AZKk2UbdU25spr/VStwkyFz3d
+SY4VzNYeLzaVTudpqwZAYfngAAjsyOZyLv8QE95RY77CEbm7lirprcB6ng8HRp/V
+EJLjQ8yWl+LxqZtYlKDBGrYLXd/EEzQJ6zKn9u4tqQaNSh35bC5l/m7dib1oWbOX
+m8W6P97u3HQSwGnpTQLvWZUvQuyOEJRygA4FXVoIrpL0Z9C19TB/MFaKdGHNVHY=
+=OJnr
+-----END PGP SIGNATURE-----
