@@ -1,0 +1,13 @@
+DEFINED_PHASES=compile install preinst prepare setup
+DEPEND=>=virtual/jdk-1.5 app-arch/unzip >=dev-java/java-config-2.1.9-r1 source? ( app-arch/zip )
+DESCRIPTION=TableLayout is a powerful layout manager
+EAPI=5
+HOMEPAGE=https://java.net/projects/tablelayout/
+IUSE=elibc_FreeBSD source doc elibc_FreeBSD
+KEYWORDS=~amd64 ~x86
+LICENSE=LGPL-2.1
+RDEPEND=>=virtual/jre-1.5 >=dev-java/java-config-2.1.9-r1 source? ( app-arch/zip )
+SLOT=0
+SRC_URI=https://java.net/projects/tablelayout/downloads/download/Everything-2009-08-26.zip
+_eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	java-pkg-2	65bbb59987d777c1106ae8aa4bf36e7b	java-pkg-simple	b21814347affda1506f12c1721a8fa55	java-utils-2	f02d3e4777b404c719a5a6479c37c6e3	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	b99aa37f734b5d426efd83b2f271cece	versionator	cd0bcdb170807e4a1984115e9d53a26f
+_md5_=a4171c3c553da59c40e1e074805a6ffe
