@@ -1,0 +1,13 @@
+DEFINED_PHASES=compile install preinst prepare setup
+DEPEND=dev-java/gnu-hylafax:0 dev-java/tablelayout:0 >=virtual/jdk-1.6 virtual/pkgconfig app-arch/unzip >=dev-java/java-config-2.1.9-r1
+DESCRIPTION=Yet another Java HylaFAX Plus Client
+EAPI=5
+HOMEPAGE=http://www.yajhfc.de/
+IUSE=elibc_FreeBSD elibc_FreeBSD
+KEYWORDS=~amd64 ~x86
+LICENSE=GPL-3
+RDEPEND=dev-java/gnu-hylafax:0 dev-java/tablelayout:0 >=virtual/jre-1.6 >=dev-java/java-config-2.1.9-r1
+SLOT=0
+SRC_URI=http://download.yajhfc.de/releases/yajhfc-0_5_7-src.zip
+_eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	java-pkg-2	65bbb59987d777c1106ae8aa4bf36e7b	java-pkg-simple	b21814347affda1506f12c1721a8fa55	java-utils-2	f02d3e4777b404c719a5a6479c37c6e3	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	b99aa37f734b5d426efd83b2f271cece	versionator	cd0bcdb170807e4a1984115e9d53a26f
+_md5_=e7e99b5680bd85a29cb9fd1f5ef3c716
