@@ -1,26 +1,20 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
-DIST yajhfc-0_5_2.jar 1902262 SHA256 7182a694b1ee6310b94ca7e5ca913cc381c463101dd2d004a92f4c86fb3a4d7e
+DIST yajhfc-0_5_2.jar 1902262 SHA256 7182a694b1ee6310b94ca7e5ca913cc381c463101dd2d004a92f4c86fb3a4d7e SHA512 0c0ba609a15dd8e79743d4afea75350ba5626676e3fa2dd24835d8d661c894e910ab1df7c69b05f9db4519ffcd3491b774cad89a2b48597e78e23720414c4e73 WHIRLPOOL 971454666b46beb2fc4aebdf8b69e9a47f32eb87e0ed9eefb1c822f2c6791bc38346645acc611aca37797d49389c5965809cb5e10bd1ec4bd01241f0167f48dd
+DIST yajhfc-0_5_7-src.zip 3577450 SHA256 896f394dabe60238114b2e91f40a595e052185b14105b00f073994cb1b454dcc SHA512 9177e959810df9ab005f2ed380275f6683aa22e0b6209d50a96d8f60018c0dc1d624dc400ad6ac2625688d57ecb84401f26dd66b145da518c0c5287c0af4e9f1 WHIRLPOOL 7e75333ea99eab1aa42937a97b0584a8f71a8b126d55e15111a0a460afa5e999d0510fb0d57f245c2b9cd38a92cc4bb1b26850617b15bb29dfd23d05960e7bdb
 EBUILD yajhfc-0.5.2.ebuild 824 SHA256 5d91c0885661c85534cc8102b18ddd3714ee1bac831e288a78973cbfe9639d6a SHA512 7d83fe6284f79c9e417fe87c6b314a2087630cf6a690e40cac55d182de14ceae9d76d60735644454216b0f8966ce94e78774ed75c897369987001ddd098e765d WHIRLPOOL 46d6b258017e53f701b54cf8ec819d604cd118f6e0d7ac253b5b3f6d60530c4640797723943b698289dfe9851e1080b5c0d0643a8896ce374cf22310731fa650
-MISC ChangeLog 891 SHA256 3fd4ce03b9b0de5619ed5304897030c957a5d35446f5ecd44372c2721b48b233 SHA512 d680c6f43aad36735d668c88bdb77e544dee07afc2454befc5908521a206938e69168adb69ba92595fd79753141243b90cc39500fd4a1155735caa0082ce8658 WHIRLPOOL e0d1515b06fde72ae0114c2f582d9d5b7da631c56489587ffc419dab4326dd51ef017c422a572116861da6e3b9d75a72facea7ddadbe4349b049f506a8ea3b9d
+EBUILD yajhfc-0.5.7.ebuild 1451 SHA256 6450583fd76acc1efba944215c9b0fbdb2cbe060401d739397320aa8bca3163f SHA512 89d316b901829dcf5be237e0b1d422bd28878f8edcf9c580fe7fb623035cd3856506775817206e2f15eb645606b2b25791f671f9a55f39af1b08c2870176ef2f WHIRLPOOL 10f4af745ecc22741ba08db293173f532178d2f66245fb8ccf0f8c685e953d19929a9b0c9d7d913471fd9ffbde0b62f01033a2bc9685040db3e3871a10af4cc2
+MISC ChangeLog 1037 SHA256 bfe23aa664f67e7f88aff408e378e1c0d76c7b13327c80b28188f3bf9449c877 SHA512 235c9bc2e145cf492d4fe4cc62ad60155528ecac80fc69aaa59e046b910690582c33fad8b8582aff181fb9bcf08bcb05ba7977e1f03a2c7ad5ff2e2b5da303fa WHIRLPOOL ae3235034d4c3f0b3e35fcbd2ff501cd509f1c82410819db1617700a5f227cb162df4948e2b8c96b23999e88f6f12c6782f8c425c135deab9c217626cb200ad3
 MISC metadata.xml 306 SHA256 d1ed0a46059396121ae6e78eaf538660d2c1d4ce03ef26310b2ea015a6fb99d0 SHA512 dc03d9d789f34757be6893363b82c270bce1b71844428258c458f521b56f260b7e54e1280a51d1e37fff113d4f7dbbed5e41d15f853622626748ec6e990cf83b WHIRLPOOL 2d66389a4c693913b129a15268e7470ca57410ad9dfe9490ae43486161809d98f627a0b36dc54e93e0a926e889cb8a2fc6f530ca2fa8e1ef338f1efe73ad90c8
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0
+Version: GnuPG v2
 
-iQJ8BAEBCgBmBQJVDco2XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQyQ0JDQjFGMzBDQ0UxMjFGNENDNDgxMDdC
-OUQ0RjIzMUJEMTU1OEFCAAoJELnU8jG9FVirsd8P/2q5stHhjkURodUZ6Po+CdaO
-qsW4oDE2X/nEl6mXzNYje3+eEXQqgfdhGyRcAhMogA4rPBmiuESs2NelazPkVED8
-iVVzdYfbDyb9ZbFCxZHUid2IL8nmNaIlNs1auzddcbwx2LnZQtmLNNRm2FD7Ib77
-Bd7ev8JKirDGUIpnvxzxZoQHiGcmTpZP71uiDy8KF+C0H+xs/RS1BG7JWPgiZcMI
-P0XyoyjqrkvfeCuJmczyNEazNjlcMEeDQePlPqShA++w5EaI35IM9RjxXc1zYB6m
-h3ebVJM+vNHvV9amaR7TzFbOKSc4QW3g7+6y0DUkYn8dJGQqN9HVW3Tr+KFhKGV+
-vkCDIJejeOAkCTmyakV9/Avcnptb0bIKiHEm8UPV6FY59SektFoOAki3/B2VhpIj
-PcqWFu1+WSR9Koiy7uZ4hgANqpjHPzteOEy5Ay4WZx8VIS/UjessJQGBuY0LjF4Y
-NNZDnZs3uoW8rniWbQ8zdBTF7P7kgp14M8cC4MEWCLbaOC7mAQNXODGIMc6vB4Kv
-K50mKnsra+dBG6ABQIVEZkzIqH633mkRHLMEA+cGe2Dat915uzPk5Z/EyvMcJPdL
-z+trSi2nnGTTUwUllOJPMQcgGTmvYBluboIEO+seuSHkjHhOXu2FB08nOc43qot6
-7ArS2TrV8ph9xel5sRfW
-=dEmY
+iQEcBAEBCAAGBQJVDobfAAoJEKCEBkJ3xQHtICIIAK18Z18ywmxvBsekusR1DXxP
+t9J9sZimvwCdWyV2zv30XhzXycCbEgG9XSvy7ojVVL6ZWqXAnL8FUlVGml3mSupe
+UCWr+V5M7vAhGdKkB6x8azHj8LIk2JmvFzd/7HxeS+KmGYjpx8zqRwGCec92jDmv
+2XPlIFit5saet3DXaE4vneFIVIoS/aXE9AqLB7CAf4p+4nireC2if24iNvAk3+9C
+Jz3kOAmf8DB3DrrKR/oPEMJQJKIIDn72iuBLMuBsjubHKbT0LH8nMVGqLbcX4bKs
+PffX0lJ+RkIhfAu8i7PLsssCQRCkzEQjB5lzl1B/XuHUzI27Kjf44sYKJRkVAKE=
+=/VcM
 -----END PGP SIGNATURE-----
