@@ -1,6 +1,11 @@
 # ChangeLog for net-misc/yajhfc
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/yajhfc/ChangeLog,v 1.3 2015/03/21 19:44:52 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/yajhfc/ChangeLog,v 1.4 2015/03/22 09:09:50 ercpe Exp $
+
+*yajhfc-0.5.7 (22 Mar 2015)
+
+  22 Mar 2015; Johann Schmitz <ercpe@gentoo.org> +yajhfc-0.5.7.ebuild:
+  Version bump of yajhfc; build from source
 
   21 Mar 2015; Justin Lecher <jlec@gentoo.org> metadata.xml,
   yajhfc-0.5.2.ebuild:
